[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/weapon/Sword/assets/weapon_anime_sword.png" type="Texture" id=1]
[ext_resource path="res://scenes/weapon/Weapon.gd" type="Script" id=2]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "SwordAttack"
length = 0.5
step = 0.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 108, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.19079, 0.473352 )
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.0
height = 0.0

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )

[node name="Pivot" type="Node2D" parent="."]

[node name="SwordAnimationPlayer" type="AnimationPlayer" parent="Pivot"]
anims/RESET = SubResource( 3 )
anims/SwordAttack = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Pivot"]
position = Vector2( 0, -19 )
scale = Vector2( 1, 1.25 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 21, -21 )
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
